3.2.1 (2016-10-DD)
------------------

Enhancements
 - [web] add constraints to start/end dates of automatic responder (#3841)
 - [web] updated Angular to version 1.5.8
 - [eas] initial support for recurring tasks EAS
 - [eas] now support replied/forwarded flags using EAS (#3796)

Bug fixes
 - [web] fixed tasks list when some weekdays are disabled
 - [web] fixed automatic refresh of calendar view
 - [web] respect SOGoSearchMinimumWordLength in contacts list editor
 - [web] improved memory usage when importing very large address books
 - [web] fixed progress indicator while importing cards or events and tasks
 - [web] improved detection of changes in CKEditor (#3839)
 - [web] fixed vCard generation for tags with no type (#3826)
 - [web] only show the organizer field of an IMIP REPLY if one is defined
 - [web] fixed saving the note of a card (#3849)
 - [web] fixed support for recurrent tasks
 - [web] improved validation of mail account delegators
 - [web] fixed auto-completion of list members (#3870)
 - [web] added missing options to subscribed addressbooks (#3850)
 - [web] fixed resource conflict error handling (403 vs 409 HTTP code)
 - [web] restored immediate deletion of messages (without moving them to the trash)
 - [eas] improve handling of email folders without a parent
 - [eas] never send IMIP reply when the "initiator" is Outlook 2013/2016
 - [core] only consider SMTP addresses for AD's proxyAddresses (#3842)
 - [core] sogo-tool manage-eas now works with single store mode


3.2.0 (2016-10-03)
------------------

New features
 - [web] added IMAP folder subscriptions management (#255)
 - [web] keyboard hotkeys (#1711, #1467, #3817)
 - [eas] initial support for server-side mailbox search operations

Enhancements
 - [web] don't allow a recurrence rule to end before the first occurrence
 - [web] updated Angular Material to version 1.1.1
 - [web] show user's name upon successful login