@@ -269,6 +269,10 @@
 "quotasFormat" = "%{0}% used on %{1} MB";
 "Unable to move/delete folder." = "Unable to move/delete folder.";
 
+/* Alternative operation when folder cannot be deleted */
+"The mailbox could not be moved to the trash folder. Would you like to delete it immediately?"
+= "The mailbox could not be moved to the trash folder. Would you like to delete it immediately?";
+
 /* Confirmation message when deleting multiple messages */
 "Are you sure you want to delete the selected messages?" = "Are you sure you want to delete the selected messages?";
 
